--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="topMainBackground"></div>
     <div class="topMainBackground-image"></div>
-    <div class="centerMainBackground"></div>
+    <!-- <div class="centerMainBackground"></div> -->
 
     <div class="svg_animations">
         <div class="circle-top-left"><img src="./images/svg/Ellipse.svg" alt=""></div>
@@ -162,14 +162,16 @@
                     </button>
                 </div>                    
             </div>
-            <div class="header__phone">
-                <div class="icon">
-                    <img src="./images/png/phone.png" alt="">
+            <a href="tel:586-286-8700">
+                <div class="header__phone">
+                    <div class="icon">
+                        <img src="./images/png/phone.png" alt="">
+                    </div>
+                    <div class="number">
+                        586-286-8700
+                    </div>
                 </div>
-                <div class="number">
-                    <a href="tel:586-286-8700">586-286-8700</a>
-                </div>
-            </div>
+            </a>
         </div>
     </header>
 
@@ -369,128 +371,186 @@
         </div>
         <hr class="custom-line">
     </div>
-    <div class="sliders active" id="danceFloor">
-        <div class="sliders__arrowPrev danceFloor__sliderPrev"></div>    
-        <div class="sliders__arrowNext danceFloor__sliderNext"></div>
-        <div class="sliders__wrapper">
-            <div class="slider" id="danceFloor__slider">
-                <div class="slide">
-                    <img src="./images/jpg/dance_floor/1.jpg" alt="">
-                    <span></span>
+
+    <div class="gallery">
+        <div id="container-lines-center">
+            <div class="sliders active" id="danceFloor">
+                <div class="sliders__arrowPrev danceFloor__sliderPrev"></div>    
+                <div class="sliders__arrowNext danceFloor__sliderNext"></div>
+                <div class="sliders__wrapper">
+                    <div class="slider" id="danceFloor__slider">
+                        <div class="slide">
+                            <img src="./images/jpg/dance_floor/1.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/dance_floor/2.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/dance_floor/3.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/dance_floor/1.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/dance_floor/2.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/dance_floor/3.jpg" alt="">
+                            <span></span>
+                        </div>
+                    </div>
                 </div>
-                <div class="slide">
-                    <img src="./images/jpg/dance_floor/2.jpg" alt="">
-                    <span></span>
+            </div>
+            <div class="sliders" id="slotMachines">
+                <div class="sliders__arrowPrev slotMachines__sliderPrev"></div>    
+                <div class="sliders__arrowNext slotMachines__sliderNext"></div>
+                <div class="sliders__wrapper">
+                    <div class="slider" id="slotMachines__slider">
+                        <div class="slide">
+                            <img src="./images/png/slide-1.png" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/png/slide-2.png" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/png/slide-1.png" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/png/slide-2.png" alt="">
+                            <span></span>
+                        </div>
+                    </div>
                 </div>
-                <div class="slide">
-                    <img src="./images/jpg/dance_floor/3.jpg" alt="">
-                    <span></span>
+            </div>
+            <div class="sliders" id="hall">
+                <div class="sliders__arrowPrev hall__sliderPrev"></div>    
+                <div class="sliders__arrowNext hall__sliderNext"></div>
+                <div class="sliders__wrapper">
+                    <div class="slider" id="hall__slider">
+                        <div class="slide">
+                            <img src="./images/jpg/hall/1.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/hall/2.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/hall/1.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/hall/2.jpg" alt="">
+                            <span></span>
+                        </div>
+                    </div>
                 </div>
-                <div class="slide">
-                    <img src="./images/jpg/dance_floor/1.jpg" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/jpg/dance_floor/2.jpg" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/jpg/dance_floor/3.jpg" alt="">
-                    <span></span>
+            </div>
+            <div class="sliders" id="kidsRoom">
+                <div class="sliders__arrowPrev kidsRoom__sliderPrev"></div>    
+                <div class="sliders__arrowNext kidsRoom__sliderNext"></div>
+                <div class="sliders__wrapper">
+                    <div class="slider" id="kidsRoom__slider">
+                        <div class="slide">
+                            <img src="./images/jpg/kids_room/1.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/kids_room/2.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/kids_room/1.jpg" alt="">
+                            <span></span>
+                        </div>
+                        <div class="slide">
+                            <img src="./images/jpg/kids_room/2.jpg" alt="">
+                            <span></span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="sliders" id="slotMachines">
-        <div class="sliders__arrowPrev slotMachines__sliderPrev"></div>    
-        <div class="sliders__arrowNext slotMachines__sliderNext"></div>
-        <div class="sliders__wrapper">
-            <div class="slider" id="slotMachines__slider">
-                <div class="slide">
-                    <img src="./images/png/slide-1.png" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/png/slide-2.png" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/png/slide-1.png" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/png/slide-2.png" alt="">
-                    <span></span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="sliders" id="hall">
-        <div class="sliders__arrowPrev hall__sliderPrev"></div>    
-        <div class="sliders__arrowNext hall__sliderNext"></div>
-        <div class="sliders__wrapper">
-            <div class="slider" id="hall__slider">
-                <div class="slide">
-                    <img src="./images/jpg/hall/1.jpg" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/jpg/hall/2.jpg" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/jpg/hall/1.jpg" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/jpg/hall/2.jpg" alt="">
-                    <span></span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="sliders" id="kidsRoom">
-        <div class="sliders__arrowPrev kidsRoom__sliderPrev"></div>    
-        <div class="sliders__arrowNext kidsRoom__sliderNext"></div>
-        <div class="sliders__wrapper">
-            <div class="slider" id="kidsRoom__slider">
-                <div class="slide">
-                    <img src="./images/jpg/kids_room/1.jpg" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/jpg/kids_room/2.jpg" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/jpg/kids_room/1.jpg" alt="">
-                    <span></span>
-                </div>
-                <div class="slide">
-                    <img src="./images/jpg/kids_room/2.jpg" alt="">
-                    <span></span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="gallery__wrapper">
-        <div class="gallery__wrapper_bg">
-            <nav class="gallery__navs">
-                <li class="gallery_nav" onclick="openSlider(danceFloor, danceFloor_nav)">
-                    <a class="active" id="danceFloor_nav">DANCE FLOOR</a>
-                </li>
-                <li class="gallery_nav" onclick="openSlider(slotMachines, slotMachines_nav)">
-                    <a id="slotMachines_nav">slot machines</a>
-                </li>
-                <li class="gallery_nav" onclick="openSlider(hall, hall_nav)">
-                    <a id="hall_nav">HALL</a>
-                </li>
-                <li class="gallery_nav" onclick="openSlider(kidsRoom, kidsRoom_nav)">
-                    <a id="kidsRoom_nav">KIDS ROOMS</a>
-                </li>
-            </nav>  
+        <div class="gallery__wrapper">
+            <div class="gallery__wrapper_bg">
+                <nav class="gallery__navs">
+                    <li class="gallery_nav" onclick="openSlider(danceFloor, danceFloor_nav)">
+                        <a class="active" id="danceFloor_nav">DANCE FLOOR</a>
+                    </li>
+                    <li class="gallery_nav" onclick="openSlider(slotMachines, slotMachines_nav)">
+                        <a id="slotMachines_nav">slot machines</a>
+                    </li>
+                    <li class="gallery_nav" onclick="openSlider(hall, hall_nav)">
+                        <a id="hall_nav">HALL</a>
+                    </li>
+                    <li class="gallery_nav" onclick="openSlider(kidsRoom, kidsRoom_nav)">
+                        <a id="kidsRoom_nav">KIDS ROOMS</a>
+                    </li>
+                </nav>  
+            </div>  
         </div>  
-    </div>   
+    </div> 
+
+    <div class="container-lines-center">
+        <div class="container-lines-center-left" id="container-lines-center-left">
+            <hr  class="custom-line">
+        </div>
+        <div class="container-lines-center-title" id="container-lines-center-title">
+            Birthday party <div>in imperial lanes</div>
+            <div class="text">
+                Choose the hall and menu online and get a discount on bowling two hours
+            </div>
+        </div>
+        <div class="container-lines-center-right" id="container-lines-center-right">
+            <hr  class="custom-line">
+        </div>
+    </div>
+
+    <div class="mainSlider">
+        <div class="mainSlider__wrapper" id="mainSlider">
+            <div class="mainSlider__slide">
+                <img src="./images/png/image 2.png" alt="">
+                <span></span>
+            </div>
+            <div class="mainSlider__slide">
+                <img src="./images/png/image 2.png" alt="">
+                <span></span>
+            </div>
+            <div class="mainSlider__slide">
+                <img src="./images/png/image 2.png" alt="">
+                <span></span>
+            </div>
+            <div class="mainSlider__slide">
+                <img src="./images/png/image 2.png" alt="">
+                <span></span>
+            </div>
+        </div>
+        <div class="mainSlider__container">
+            <div class="mainSlider__arrowPrev" id="mainSlider__Prev">
+                <div class="arrow"></div>
+                <div class="arrow"></div>            
+            </div>
+            <div class="mainSlider__text">
+                gallery of our <span>hall and playground</span>
+            </div>
+            <div class="mainSlider__arrowNext" id="mainSlider__Next">
+                <div class="arrow"></div>
+                <div class="arrow"></div>  
+            </div>
+        </div>
+        <div class="mainSlider__button"><button>Book THIS HALL</button></div>
+    </div>
+    
+
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
