--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMPERIAL LANES</title>
+    <base href="index.html">
     <link rel="stylesheet" href="./styles/main.css">
     
     <link type="image/x-icon" rel="shortcut icon" href="./images/favicon/favicon.ico">
